--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,7 +4,7 @@ jobs:
     working_directory: ~/wamp-zre
     docker:
       - image: circleci/node:6.11
-      - image: crossbar:latest
+      - image: crossbario/crossbar:latest
     steps:
       - checkout
       - run:
