--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,13 +3,20 @@ jobs:
   build:
     working_directory: ~/wamp-zre
     docker:
-      - image: circleci/node:8
+      - image: circleci/node:6
       - image: crossbario/crossbar:latest
     steps:
       - checkout
       - run:
           name: update-npm
-          command: 'sudo npm install -g npm@latest'
+          command: |
+            currentDirectory=$(pwd)
+            mkdir -p /tmp/npm-install-directory
+            cd /tmp/npm-install-directory
+            npm install npm@6
+            rm -rf /usr/local/lib/node_modules
+            mv node_modules /usr  /local/lib/
+            cd $currentDirectory
       - restore_cache:
           key: dependency-cache-{{ checksum "package.json" }}
       - run:
