--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,13 +29,10 @@ jobs:
       - run:
           name: test
           command: npm test
-#      - run:
-#          name: code-coverage
-#          command: './node_modules/.bin/nyc report --reporter=text-lcov'
       - store_artifacts:
           path: junit.xml
 #      - store_artifacts:
 #          path: coverage
 #          prefix: coverage
       - store_test_results:
-          path: test-results.xml
+          path: junit.xml
