remove typo in sudo

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -33,7 +33,7 @@ jobs:
           name: move-test-results
           command: |
             sudo mkdir -p $CIRCLE_TEST_REPORTS/junit
-            sudp cp junit.xml $CIRCLE_TEST_REPORTS/junit/junit.xml
+            sudo cp junit.xml $CIRCLE_TEST_REPORTS/junit/junit.xml
       - store_artifacts:
           path: junit.xml
       - store_test_results:
