--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -32,9 +32,9 @@ jobs:
       - run:
           name: move-test-results
           command: |
-            sudo mkdir -p $CIRCLE_TEST_REPORTS/junit
-            sudo cp junit.xml $CIRCLE_TEST_REPORTS/junit/junit.xml
+            sudo mkdir -p /$CIRCLE_TEST_REPORTS/junit
+            sudo cp junit.xml /$CIRCLE_TEST_REPORTS/junit/junit.xml
       - store_artifacts:
           path: junit.xml
       - store_test_results:
-          path: $CIRCLE_TEST_REPORTS/junit/junit.xml
+          path: /$CIRCLE_TEST_REPORTS/junit/junit.xml
