Squashed commit of the following: (fixes circleci bugs)
commit 210ba8e2680a7aaa9b644938cc234fb0e0747bd4
Author: Damiaan Dufaux <damiaan@dpro.be>
Date:   Tue Jul 11 18:08:19 2017 +0200

    remove test results

commit bf019284132e9cb6cbd0d7b791bc5b0bf6184420
Author: Damiaan Dufaux <damiaan@dpro.be>
Date:   Tue Jul 11 18:05:55 2017 +0200

    use absolute paths

commit 94f1acfcbda9363899e970503e2cb46ce313a442
Author: Damiaan Dufaux <damiaan@dpro.be>
Date:   Tue Jul 11 18:03:14 2017 +0200

    remove typo in sudo

commit fc615c8b3f721eb1aa2b18d17a7336d1a906c6a2
Author: Damiaan Dufaux <damiaan@dpro.be>
Date:   Tue Jul 11 18:02:01 2017 +0200

    use dashes

commit 7cce21e55fe8e43e302e966cf31b54484068c726
Author: Damiaan Dufaux <damiaan@dpro.be>
Date:   Tue Jul 11 17:57:36 2017 +0200

    sudo copy test results

commit 56d2f385e48dc711998fadae9bd71ec0a24d6bdf
Author: Damiaan Dufaux <damiaan@dpro.be>
Date:   Tue Jul 11 17:55:41 2017 +0200

    store test results in special dir

commit 428d02fac7e05a75915a5f654a69aac718187ac9
Author: Damiaan Dufaux <damiaan@dpro.be>
Date:   Tue Jul 11 17:52:35 2017 +0200

    make test result dir

commit 8a7fecfa7eb7936781f4a9b0e1f006181e9936b2
Author: Damiaan Dufaux <damiaan@dpro.be>
Date:   Tue Jul 11 17:50:05 2017 +0200

    copy test results

commit 67cc9f486ac8262bc65092eb1e0c259794b5881b
Author: Damiaan Dufaux <damiaan@dpro.be>
Date:   Tue Jul 11 17:40:34 2017 +0200

    fix test-result path

commit 89b936af5940fd7958462f39793eb9e953d08b15
Author: Damiaan Dufaux <damiaan@dpro.be>
Date:   Tue Jul 11 17:36:20 2017 +0200

    sudo move

commit 3567196d6c074bdcf283bc56ceb6c6d97eb0d873
Author: Damiaan Dufaux <damiaan@dpro.be>
Date:   Tue Jul 11 17:35:26 2017 +0200

    correct typo in /usr/local/lib/

commit 3e7f67f2f6c840e18cf5ef54c64d6e025535eb84
Author: Damiaan Dufaux <damiaan@dpro.be>
Date:   Tue Jul 11 17:30:58 2017 +0200

    use sudo to remove npm

commit 0cbb1c8fc14842ce379ba77a6a6f3908da76d9bd
Author: Damiaan Dufaux <damiaan@dpro

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,13 +3,20 @@ jobs:
   build:
     working_directory: ~/wamp-zre
     docker:
-      - image: circleci/node:6.10
+      - image: circleci/node:6
       - image: crossbario/crossbar:latest
     steps:
       - checkout
       - run:
           name: update-npm
-          command: 'sudo npm install -g npm@latest'
+          command: |
+            currentDirectory=$(pwd)
+            mkdir -p /tmp/npm-install-directory
+            cd /tmp/npm-install-directory
+            npm install npm@5
+            sudo rm -rf /usr/local/lib/node_modules
+            sudo mv node_modules /usr/local/lib/
+            cd $currentDirectory
       - restore_cache:
           key: dependency-cache-{{ checksum "package.json" }}
       - run:
@@ -22,13 +29,5 @@ jobs:
       - run:
           name: test
           command: npm test
-#      - run:
-#          name: code-coverage
-#          command: './node_modules/.bin/nyc report --reporter=text-lcov'
       - store_artifacts:
           path: junit.xml
-#      - store_artifacts:
-#          path: coverage
-#          prefix: coverage
-      - store_test_results:
-          path: test-results.xml
