fix timeout bug from zyre.js

--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
   "homepage": "https://github.com/Dev1an/WAMP-ZRE#readme",
   "dependencies": {
     "autobahn": "^17.5.2",
-    "zyre.js": "^1.0.6"
+    "zyre.js": "github:interpretor/zyre.js#d24dce79a0c2494a20ac0689144f99bb17fae17a"
   },
   "devDependencies": {
     "jest": "^20.0.4",
